--- a/print.html
+++ b/print.html
@@ -82,7 +82,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="introduction.html">Introduction</a></li><li class="chapter-item expanded "><a href="2000-const-generics.html">2000-const-generics</a></li><li class="chapter-item expanded "><a href="2342-const-control-flow.html">2342-const-control-flow</a></li><li class="chapter-item expanded "><a href="2495-min-rust-version.html">2495-min-rust-version</a></li><li class="chapter-item expanded "><a href="2789-sparse-index.html">2789-sparse-index</a></li><li class="chapter-item expanded "><a href="3128-io-safety.html">3128-io-safety</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="introduction.html">Introduction</a></li><li class="chapter-item expanded "><a href="0049-match-arm-attributes.html">0049-match-arm-attributes</a></li><li class="chapter-item expanded "><a href="2000-const-generics.html">2000-const-generics</a></li><li class="chapter-item expanded "><a href="2342-const-control-flow.html">2342-const-control-flow</a></li><li class="chapter-item expanded "><a href="2495-min-rust-version.html">2495-min-rust-version</a></li><li class="chapter-item expanded "><a href="2789-sparse-index.html">2789-sparse-index</a></li><li class="chapter-item expanded "><a href="3128-io-safety.html">3128-io-safety</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -357,6 +357,82 @@ consensus and community norms, not impose more structure than necessary.</p>
 <h3 id="contributions"><a class="header" href="#contributions">Contributions</a></h3>
 <p>Unless you explicitly state otherwise, any contribution intentionally submitted for inclusion in the work by you, as defined in the Apache-2.0 license, shall be dual licensed as above, without any additional terms or conditions.</p>
 <div style="break-before: page; page-break-before: always;"></div><ul>
+<li>Start Date: 2014-03-20</li>
+<li>RFC PR: <a href="https://github.com/rust-lang/rfcs/pull/49">rust-lang/rfcs#49</a></li>
+<li>Rust Issue: <a href="https://github.com/rust-lang/rust/issues/12812">rust-lang/rust#12812</a></li>
+<li>Translators: [<a href="https://github.com/FizzyElt">@FizzyElt</a>]</li>
+<li>Commit: <a href="https://github.com/rust-lang/rfcs/blob/0e2baed56a1d31a65f58f4cb615eedfaad59c2e3/text/0049-match-arm-attributes.md">The commit link this page based on</a></li>
+<li>Updated: 2022-05-17</li>
+</ul>
+<h1 id="概要"><a class="header" href="#概要">概要</a></h1>
+<p>允許屬性在配對分支上</p>
+<h1 id="動機"><a class="header" href="#動機">動機</a></h1>
+<p>有時希望使用屬性來注釋配對語句的分支，例如條件編譯 <code>#[cfg]</code> 或是分支權重（後者為最重要的用途）。</p>
+<p>對於條件編譯，暫時得解決辦法是使用 <code>#[cfg]</code> 來重複宣告相同函式來處理不同的案例。一個案例研究是 <a href="https://github.com/sfackler/rust-openssl">sfackler 的 bindings to OpenSSL</a>，在多數的發行版本中移除了 SSLv2 支持，因此 Rust bindings 部分需要被條件禁用。支援各種不同 SSL 版本最顯而易見的方法是使用枚舉。</p>
+<pre><pre class="playground"><code class="language-rust">
+<span class="boring">#![allow(unused)]
+</span><span class="boring">fn main() {
+</span>pub enum SslMethod {
+    #[cfg(sslv2)]
+    /// Only support the SSLv2 protocol
+    Sslv2,
+    /// Only support the SSLv3 protocol
+    Sslv3,
+    /// Only support the TLSv1 protocol
+    Tlsv1,
+    /// Support the SSLv2, SSLv3 and TLSv1 protocols
+    Sslv23,
+}
+<span class="boring">}
+</span></code></pre></pre>
+<p>然而，所有的 <code>match</code> 只能在 <code>cfg</code> 啟用時使用 <code>Sslv2</code>，例如下面內容是無效的：</p>
+<pre><pre class="playground"><code class="language-rust">
+<span class="boring">#![allow(unused)]
+</span><span class="boring">fn main() {
+</span>fn name(method: SslMethod) -&gt; &amp;'static str {
+    match method {
+        Sslv2 =&gt; &quot;SSLv2&quot;,
+        Sslv3 =&gt; &quot;SSLv3&quot;,
+        _ =&gt; &quot;...&quot;
+    }
+}
+<span class="boring">}
+</span></code></pre></pre>
+<p>一個有效的方法則必須有兩個定義：<code>#[cfg(sslv2)] fn name(...)</code> 和 <code>#[cfg(not(sslv2)] fn name(...)</code>
+。前者有 <code>Sslv2</code> 的分支，後者沒有。顯然，對於枚舉中每個額外的 <code>cfg</code> 變體，這都會以指數型的方式爆炸。</p>
+<p>分支權重將允許仔細的微優化器（micro-optimiser）通知編譯器，例如，鮮少採取某個配對分支：</p>
+<pre><pre class="playground"><code class="language-rust">
+<span class="boring">#![allow(unused)]
+</span><span class="boring">fn main() {
+</span>match foo {
+    Common =&gt; {}
+    #[cold]
+    Rare =&gt; {}
+}
+<span class="boring">}
+</span></code></pre></pre>
+<h1 id="詳細設計"><a class="header" href="#詳細設計">詳細設計</a></h1>
+<p>一般的屬性語法，應用於整個配對分支。</p>
+<pre><pre class="playground"><code class="language-rust">
+<span class="boring">#![allow(unused)]
+</span><span class="boring">fn main() {
+</span>match x {
+    #[attr]
+    Thing =&gt; {}
+
+    #[attr]
+    Foo | Bar =&gt; {}
+
+    #[attr]
+    _ =&gt; {}
+}
+<span class="boring">}
+</span></code></pre></pre>
+<h1 id="替代方案"><a class="header" href="#替代方案">替代方案</a></h1>
+<p>實際上沒有通用的替代方案; 人們也許可以用一些巨集（macro）和輔助函數來解決條件枚舉變體的配對問題; 但一般來說，這起不了任何作用。</p>
+<h1 id="未解決的問題"><a class="header" href="#未解決的問題">未解決的問題</a></h1>
+<p>無</p>
+<div style="break-before: page; page-break-before: always;"></div><ul>
 <li>Feature Name: <code>const_generics</code></li>
 <li>Start Date: 2017-05-01</li>
 <li>RFC PR: <a href="https://github.com/rust-lang/rfcs/pull/2000">rust-lang/rfcs#2000</a></li>
@@ -367,7 +443,7 @@ consensus and community norms, not impose more structure than necessary.</p>
 </ul>
 <h1 id="總結"><a class="header" href="#總結">總結</a></h1>
 <p>允許所有型別（type）以作為常數值（constant values）的形式成為泛型（generic），這能讓使用者用 <code>impl</code> 寫出所有陣列型別（array types）。</p>
-<h1 id="動機"><a class="header" href="#動機">動機</a></h1>
+<h1 id="動機-1"><a class="header" href="#動機-1">動機</a></h1>
 <p>現在的 Rust 有一種將常數參數化（parametric）型別︰內建的陣列型別 <code>[T; LEN]</code>。然而，常數泛型（const generics）並非第一級別的功能，使用者無法自己定義將常數值作爲泛型的型別，且不能對所有的陣列實作特徵（traits）。</p>
 <p>在此限制下，標準庫僅包含長度最多到 32 的陣列實作，而陣列也因此被視爲語言的第二級別的功能。即使在長度可靜態已知的情形下，也大多調配於堆（heap）上成為向量（vector）而非使用陣列型別，因而造成一定程度上的效能取捨。</p>
 <p>常數參數也能讓使用者更自然地指定一個泛型變體（variant）, 且相比於型別更能確切地反應其值。舉例來說，基於某些因素有個型別用一個名稱來作為參數的話，使用 <code>&amp;'static str</code> 來提供其名稱會比（藉由相關的常數或是函式提供的）單元型別（unit type）的形式還來的合理，這能簡化 API。</p>
@@ -497,7 +573,7 @@ fn foo&lt;const N: usize&gt;() -&gt; Foo&lt;N&gt; {
 <h1 id="缺點"><a class="header" href="#缺點">缺點</a></h1>
 <p>此功能由於允許型別由常數決定，將為型別系統增加了大量的複雜性。它需要抽象變數相等性的確定規則，這出現了很多令人意外的的特殊情況。它增加了 Rust 的很多語法。如果我們不要採用此功能，Rust 肯定會更簡單。</p>
 <p>然而，我們已經引入了一種由常數確定的型別（數組型別）。泛型化的功能似乎是必然的，甚至是不可避免的，鑑於此，我們應該盡早決定。</p>
-<h1 id="替代方案"><a class="header" href="#替代方案">替代方案</a></h1>
+<h1 id="替代方案-1"><a class="header" href="#替代方案-1">替代方案</a></h1>
 <p>除了暫緩執行或不執行外，並沒有真的替代方案。</p>
 <p>我們可以限制常數泛型為 <code>usize</code> 型別，但這不會讓實作更為簡單。</p>
 <p>我們可以對常數相對性的複雜概念更積極地發展，但這會使實作比上述說明得更加複雜。</p>
@@ -519,7 +595,7 @@ fn foo&lt;const N: usize&gt;() -&gt; Foo&lt;N&gt; {
 </ul>
 <h1 id="總結-1"><a class="header" href="#總結-1">總結</a></h1>
 <p>透過此功能，可以在常數求值（const evaluation）中使用 <code>if</code> 及 <code>match</code> 並使他們被延遲求值。簡單來說，這項功能允許我們寫 <code>if x &lt; y { y - x } else { x - y }</code>；即使當使用非負型別時在 <code>x &lt; y</code> 的 <code>else</code> 分支會報溢位錯誤 (overflow error)。</p>
-<h1 id="動機-1"><a class="header" href="#動機-1">動機</a></h1>
+<h1 id="動機-2"><a class="header" href="#動機-2">動機</a></h1>
 <p>在常數宣告中使用條件式對於建立像是 <code>NonZero::new</code> 的 <code>const fn</code> 及 直譯判定（interpreting assertions）來說很重要。</p>
 <h1 id="教學式解說"><a class="header" href="#教學式解說">教學式解說</a></h1>
 <p>如果你寫</p>
@@ -637,7 +713,7 @@ name = &quot;foo&quot;
 version = &quot;0.1.0&quot;
 rust = &quot;1.30&quot;
 </code></pre>
-<h1 id="動機-2"><a class="header" href="#動機-2">動機</a></h1>
+<h1 id="動機-3"><a class="header" href="#動機-3">動機</a></h1>
 <p>當前 crate 無任何正式方法指定 MSRV，導致使用者無法在不建構該 crate 的情況下得知 crate 是否可透過他們的工具鏈（toolchain）建構。這也帶來有關如何在提升 MSRV 時管理 crate 版本的爭論，保守的作法是將之視為破壞性改動，這種作法會阻礙整個生態採納新功能，或使得版本號通膨式提升，進而讓下游的 crate 很難跟上。另一方面，若作法稍微寬鬆些，則導致採用較舊編譯器版本的使用者無法成功編譯它們的 crate。</p>
 <h1 id="教學式解說-1"><a class="header" href="#教學式解說-1">教學式解說</a></h1>
 <p>若你想指定一個特定 MSRV 版本，請在 <code>Cargo.toml</code> 的 <code>[package]</code> 區塊中的 <code>rust</code> 欄位設定指定的 Rust 版本。如果你建構一個 crate 時有任一依賴要求的 MSRV 比你當前工具鏈更高，會導致編譯錯誤，指明該依賴與它的 MSRV。這個行為可以透過 <code>--no-msrv-check</code> 選項來停用。</p>
@@ -691,7 +767,7 @@ rust = &quot;1.33&quot;
 <li>更複雜的依賴版本解析演算法。</li>
 <li>使用 <code>cargo publish</code> 配合 MSRV <code>rust = &quot;stable&quot;</code> 恐過於保守。</li>
 </ul>
-<h1 id="替代方案-1"><a class="header" href="#替代方案-1">替代方案</a></h1>
+<h1 id="替代方案-2"><a class="header" href="#替代方案-2">替代方案</a></h1>
 <ul>
 <li>自動計算 MSRV。</li>
 <li>不做任何事，依靠 <a href="https://github.com/rust-lang/rfcs/pull/2483">LTS 發行</a> 的 crate MSRV 提升。</li>
@@ -723,7 +799,7 @@ rust = &quot;1.33&quot;
 </ul>
 <h1 id="總結-3"><a class="header" href="#總結-3">總結</a></h1>
 <p>可透過 HTTP 選擇性下載 crates-io 索引，類於 Ruby 的 Bundler 的作法。傳輸方式從預先（ahead-of-time）Git clone 改變為 HTTP 按需下載。既有的索引結構和內容維持不變。重要的是，此提案可與靜態檔案協同運作，而不需客製化的伺服器端 API。</p>
-<h1 id="動機-3"><a class="header" href="#動機-3">動機</a></h1>
+<h1 id="動機-4"><a class="header" href="#動機-4">動機</a></h1>
 <p>完整的 crate 索引相對龐大且下載慢。它還會隨著 crates.io 增長而增長，讓情況每況愈下。需要下載完整索引這件事拖累了首次使用 Cargo 的速度。尤其是在無狀態的 CI 環境下更是緩慢又浪費且只使用完整索引的非常小一部分，剩下全都給拋棄。快取索引在 CI 環境可謂困難重重（<code>.cargo</code> 目錄很巨）又經常低效（如：在 Travis Ci 上傳下載大型快取幾乎和下載新鮮索引一樣慢）。</p>
 <p>目前索引的儲存資料格式和 git 協定搭配起來並不是很舒服。未壓縮的索引內容 tarball（截止 eb037b4863）佔 176MiB，<code>gzip -1</code> 需要 16MiB，而 <code>xz -6</code> 壓縮則要 10MiB。然 Git clone 卻回報下載了 215 MiB，比未壓縮的最新索引內容還大，且是壓縮後 tarball 的 <strong>二十倍之多</strong>。</p>
 <p>將 git 歷史記錄 shallow clone 或 squash 只是暫時解。且不論事實上 <a href="http://blog.cocoapods.org/Master-Spec-Repo-Rate-Limiting-Post-Mortem/">GitHub 指出它們不想支援大型儲存庫的 shallow clone</a>，也不論 libgit2 尚未支援 shallow clone，實際上這作法仍未解決客戶端必須下載包含所有 crate 的整包索引。</p>
@@ -794,7 +870,7 @@ rust = &quot;1.33&quot;
 </ul>
 <h1 id="總結-4"><a class="header" href="#總結-4">總結</a></h1>
 <p>透過引進<strong>輸入輸出安全性</strong>（I/O safety）之概念與一系列新型別與特徵，保障 <code>AsRaw</code> 及相關特徵的使用者對原始資源 handle （raw resource handle）之使用，以彌補 Rust 封裝邊界的漏洞。</p>
-<h1 id="動機-4"><a class="header" href="#動機-4">動機</a></h1>
+<h1 id="動機-5"><a class="header" href="#動機-5">動機</a></h1>
 <p>Rust 標準函式庫幾乎算是已經提供了<strong>輸入輸出安全性</strong>，保證程式的一部分若私自持有一個原始 handle （raw handle），其他部分就無法存取。例如 <a href="https://doc.rust-lang.org/stable/std/os/unix/io/trait.FromRawFd.html#tymethod.from_raw_fd"><code>FromRawFd::from_raw_fd</code></a> 標示為不安全，它不允許使用者在 safe Rust 之下執行如 <code>File::from_raw_fd(7)</code> 等操作，或是在程式各處私自持有檔案描述子（file descriptor）來執行輸入輸出。</p>
 <p>不過仍有漏網之魚。許多函式庫的 API 透過接受 <a href="https://doc.rust-lang.org/stable/std/os/unix/io/trait.AsRawFd.html"><code>AsRawFd</code></a>/<a href="https://doc.rust-lang.org/stable/std/os/unix/io/trait.IntoRawFd.html"><code>IntoRawFd</code></a> 來執行輸入輸出操作：</p>
 <pre><pre class="playground"><code class="language-rust">
